# sw-project-parkingapi

./: db.sqlite3  pyproject.toml
config/: settings.py  urls.py
parkingApi/: apps.py  models.py  serializers.py  urls.py  views.py
parkingApi/migrations/: 0001_initial.py
